[package]
authors = ["Cael Coonai"]
name = "fourier_coefficients"
description = "Calculates Fourier Series coefficients."
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.10", features = ["derive"]}
rayon = "1.8.0"
